--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -245,13 +245,13 @@ jobs:
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg12_gcc
-        path: ${{ github.workspace }}/build_MG12/test/unit_test/build/
+        path: ${{ github.workspace }}/build_MG12/
         retention-days: 90
     - name: Upload firmware MG24
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg24_gcc
-        path: ${{ github.workspace }}/build/test/unit_test/build/
+        path: ${{ github.workspace }}/build/
         retention-days: 90
   job2:
     name: Run unit test
@@ -302,7 +302,7 @@ jobs:
     - name: Create build folder
       run: |
         make prepare
-        mkdir -p ${{ github.workspace }}/build/test/unit_test/build
+        #mkdir -p ${{ github.workspace }}/build/test/unit_test/build
     - name: Install jq (if needed)
       run: |
         jq -V
@@ -325,8 +325,8 @@ jobs:
           curl -L -o firmware_mg12_gcc.zip -H "Authorization: token $PAT" "$ARTIFACT_URL"
           if [ $? -eq 0 ] && [ -f "firmware_mg12_gcc.zip" ]; then
             echo "Download successful"
-            mv firmware_mg12_gcc.zip ./build/test/unit_test/build
-            unzip ./build/test/unit_test/build/firmware_mg12_gcc.zip -d ./build/test/unit_test/build
+            mv firmware_mg12_gcc.zip ./build/
+            unzip ./build/test/unit_test/build/firmware_mg12_gcc.zip -d ./build/
             ls -R
           else
             echo "Download failed"
@@ -351,8 +351,8 @@ jobs:
           curl -L -o firmware_mg24_gcc.zip -H "Authorization: token $PAT" "$ARTIFACT_URL"
           if [ $? -eq 0 ] && [ -f "firmware_mg24_gcc.zip" ]; then
             echo "Download successful"
-            mv firmware_mg24_gcc.zip ./build/test/unit_test/build
-            unzip ./build/test/unit_test/build/firmware_mg24_gcc.zip -d ./build/test/unit_test/build
+            mv firmware_mg24_gcc.zip ./build/
+            unzip ./build/test/unit_test/build/firmware_mg24_gcc.zip -d ./build/
             ls -R
           else
             echo "Download failed"
