--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -255,7 +255,7 @@ jobs:
         retention-days: 90
   job2:
     name: Run unit test
-    runs-on: [self-hosted, ds-sqa-hn-iec]
+    runs-on: [self-hosted, DS_SQA_HN_01]
     needs: job1
     permissions:
       contents: read
