--- a/.github/workflows/03-Run_Integration_Test.yaml
+++ b/.github/workflows/03-Run_Integration_Test.yaml
@@ -196,6 +196,7 @@ jobs:
         export PATH=$PATH:$PWD/commander
         export PATH=$PATH:$PWD/slc_cli
         export TOOL_DIRS=$PWD/$TOOL_DIRS_BUILD
+        export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         export PATH=$PATH:/usr/bin/
         export SDK_PATH_BUILD=$PWD/gecko_sdk_$SDK_VER
         export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
@@ -212,8 +213,8 @@ jobs:
         cd build
         slc signature trust -extpath $SDK_PATH_BUILD/extension/IEC60730_Libs
         echo "Run Cmake"
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
-        make unit_test_info -j4
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
+        make integration_test_info -j4
         export HOST_IP=192.168.1.69
         cd ../test/
         ls -la
@@ -232,8 +233,8 @@ jobs:
         cd build
         slc signature trust -extpath $SDK_PATH_BUILD/extension/IEC60730_Libs
         echo "Run Cmake"
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
-        make unit_test_info -j4
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
+        make integration_test_info -j4
         cd ../test/
         ls -la
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG24 }}" ]; then
@@ -369,8 +370,8 @@ jobs:
         # make prepare
         echo "Run unit test for MG12"
         cd build
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
-        make unit_test_info -j4
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
+        make integration_test_info -j4
         slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG12 }}" ]; then
@@ -399,8 +400,8 @@ jobs:
         unzip ./build/firmware_mg24_gcc.zip -d ./build/
         ls -R
         cd build
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
-        make unit_test_info -j4
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
+        make integration_test_info -j4
         slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG12 }}" ]; then
