--- a/.github/workflows/00-Check_Coding_Convention.yaml
+++ b/.github/workflows/00-Check_Coding_Convention.yaml
@@ -68,3 +68,14 @@ jobs:
         name: CodingConventionResult
         path: CodingConventionTool.txt
         retention-days: 90
+    - name: Check if multiple keywords exist in the log file
+      run: |
+        keywords=("Failed")
+        for keyword in "${keywords[@]}"; do
+          if grep -q "$keyword" CodingConventionTool.txt; then
+            echo "Keyword '$keyword' found in the file."
+            exit 1
+          else
+            echo "Keyword '$keyword' not found in the file."
+          fi
+        done
