--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -361,19 +361,17 @@ jobs:
         export PATH=$PATH:~/slc_cli
         export PATH=$PATH:/usr/bin/
         export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
-        export TOOL_DIRS=$TOOL_DIRS_RUN
         export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH_RUN}
         ninja --version
         slc signature trust --sdk $SDK_PATH_RUN
-        echo "TOOL_DIRS=$TOOL_DIRS"
-        #slc configuration -gcc=$TOOL_DIRS
-        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
+        slc configuration -gcc=$TOOL_DIRS_RUN
         # make prepare
         echo "Run unit test for MG12"
         cd build
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
         make unit_test_info -j4
+        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG12 }}" ]; then
             ADAPTER_SN_MG12=440189400
@@ -391,7 +389,6 @@ jobs:
         #echo 'bash execute_unit_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER "-DENABLE_CRC_USE_SW=ON -DENABLE_SW_CRC_TABLE=ON"' > log/Test_integration_$BOARD_NAME_GCC_4.txt
         #echo 'bash execute_unit_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER "-DENABLE_CRC_USE_SW=ON -DENABLE_SW_CRC_TABLE=ON -DENABLE_CAL_CRC_32=ON"' > log/Test_integration_$BOARD_NAME_GCC_5.txt
         #echo 'bash execute_unit_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER "-DENABLE_CRC_USE_SW=ON  -DENABLE_CAL_CRC_32=ON"' > log/Test_integration_$BOARD_NAME_GCC_5.txt
-
         echo "Run unit test for MG24"
         cd ${{ github.workspace }}
         ls -la
@@ -401,9 +398,9 @@ jobs:
         unzip ./build/firmware_mg24_gcc.zip -d ./build/
         ls -R
         cd build
-        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
         make unit_test_info -j4
+        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG12 }}" ]; then
             ADAPTER_SN_MG12=440189400
