--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -355,23 +355,33 @@ jobs:
             echo "Download failed"
             exit 1
           fi
+    - name: Install GCC
+      if: always()
+      run: |
+        wget $GCC_URL
+        tar -xf arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz
+        # ls -la
+        cd arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi
+        # ls -la
     - name: Run test
       run: |
         export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
         export PATH=$PATH:~/slc_cli
         export PATH=$PATH:/usr/bin/
         export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
+        export TOOL_DIRS=$TOOL_DIRS_RUN
         export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH_RUN}
         ninja --version
         slc signature trust --sdk $SDK_PATH_RUN
-        slc configuration -gcc=$TOOL_DIRS_RUN
+        echo "TOOL_DIRS=$TOOL_DIRS"
+        #slc configuration -gcc=$TOOL_DIRS
+        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         # make prepare
         echo "Run unit test for MG12"
         cd build
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
         make unit_test_info -j4
-        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG12 }}" ]; then
             ADAPTER_SN_MG12=440189400
@@ -398,9 +408,9 @@ jobs:
         unzip ./build/firmware_mg24_gcc.zip -d ./build/
         ls -R
         cd build
+        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
         make unit_test_info -j4
-        slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG12 }}" ]; then
             ADAPTER_SN_MG12=440189400
