--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -112,11 +112,11 @@ jobs:
           COMPILER=GCC >> $GITHUB_ENV
         fi
         if [ "$COMPILER" == "GCC" ]; then
-          TOOL_DIRS_BUILD=arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi/bin >> $GITHUB_ENV
-          TOOL_DIRS_RUN=/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin >> $GITHUB_ENV 
+          echo "TOOL_DIRS_BUILD=arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi/bin" >> $GITHUB_ENV
+          echo "TOOL_DIRS_RUN=/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin" >> $GITHUB_ENV 
         else
-          TOOL_DIRS_BUILD=/home/sqa/Downloads/EmbeddedWorkbench8.4/arm/bin >> $GITHUB_ENV
-          TOOL_DIRS_RUN=/home/sqa/Downloads/EmbeddedWorkbench8.4/arm/bin >> $GITHUB_ENV          
+          echo "TOOL_DIRS_BUILD=/home/sqa/Downloads/EmbeddedWorkbench8.4/arm/bin" >> $GITHUB_ENV
+          echo "TOOL_DIRS_RUN=/home/sqa/Downloads/EmbeddedWorkbench8.4/arm/bin" >> $GITHUB_ENV          
         fi
         echo "Compiler: $COMPILER"
         echo "TOOL_DIRS_BUILD: $TOOL_DIRS_BUILD"
@@ -260,7 +260,7 @@ jobs:
         ls -la "${{ github.workspace }}/simplicity_sdk"
         if [ "$COMPILER" == "GCC" ]; then
           export TOOL_CHAIN=GCC
-          export TOOL_DIRS=$PWD/env.TOOL_DIRS_BUILD
+          export TOOL_DIRS=$PWD/$TOOL_DIRS_BUILD
           export SDK_PATH_BUILD=$PWD/gecko_sdk_$SDK_VER
           export PATH=$PATH:$PWD/commander
           export PATH=$PATH:$PWD/slc_cli
@@ -274,11 +274,11 @@ jobs:
           ./slc --version
           ./slc configuration --sdk=${SDK_PATH_BUILD}
           ./slc signature trust --sdk $SDK_PATH_BUILD
-          ./slc configuration -gcc=env.TOOL_DIRS_BUILD
+          ./slc configuration -gcc=$TOOL_DIRS_BUILD
           ./slc signature trust -extpath $SDK_PATH_BUILD/extension/$REPO_NAME
         else
           export TOOL_CHAIN=IAR
-          export TOOL_DIRS=env.TOOL_DIRS_BUILD
+          export TOOL_DIRS=$TOOL_DIRS_BUILD
           export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
           export PATH=$PATH:~/slc_cli
           export PATH=$PATH:/usr/bin/
@@ -446,7 +446,7 @@ jobs:
         export PATH=$PATH:~/slc_cli
         export PATH=$PATH:/usr/bin/
         export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
-        export TOOL_DIRS=env.TOOL_DIRS_RUN
+        export TOOL_DIRS=$TOOL_DIRS_RUN
         #export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH_RUN}
         slc signature trust --sdk $SDK_PATH_RUN
@@ -540,7 +540,7 @@ jobs:
         export PATH=$PATH:~/slc_cli
         export PATH=$PATH:/usr/bin/
         export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
-        export TOOL_DIRS=env.TOOL_DIRS_RUN
+        export TOOL_DIRS=$TOOL_DIRS_RUN
         #export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH_RUN}
         slc signature trust --sdk $SDK_PATH_RUN
