--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -161,6 +161,7 @@ jobs:
         ls gecko_sdk_${{env.SDK_VER}}/extension
         
     - name: Install Amazon Corretto 17
+      if: ${{ env.COMPILER == 'GCC' }}
       run: |
         cd ${{ github.workspace }}
         echo "Current directory: $PWD"
@@ -311,6 +312,7 @@ jobs:
         fi
         export FLASH_REGIONS_TEST=$START_ADDR_FLASH_M12
         echo "Run bash script"
+        echo "Run bash script -> execute_unit_test.sh $BOARD_NAME_MG12 $TASK $COMPONENT $ADAPTER_SN_MG12 $COMPILER"
         bash execute_unit_test.sh $BOARD_NAME_MG12 $TASK $COMPONENT $ADAPTER_SN_MG12 $COMPILER 2>&1 | tee log_MG12/Gen_log_MG12.txt
         echo "Generate MG24 image"
         cd ${{ github.workspace }}
@@ -339,7 +341,7 @@ jobs:
         fi  
         export FLASH_REGIONS_TEST=$START_ADDR_FLASH_M24
         echo "Run bash script -> execute_unit_test.sh $BOARD_NAME_MG24 $TASK $COMPONENT $ADAPTER_SN_MG24 $COMPILER"
-        bash execute_unit_test.sh $BOARD_NAME_MG24 gen-only $COMPONENT $ADAPTER_SN_MG24 $COMPILER 2>&1 | tee log_MG24/Gen_log_MG24.txt
+        bash execute_unit_test.sh $BOARD_NAME_MG24 $TASK $COMPONENT $ADAPTER_SN_MG24 $COMPILER 2>&1 | tee log_MG24/Gen_log_MG24.txt
   
     - name: Upload firmware MG12
       uses: actions/upload-artifact@v4.3.4
