--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -84,6 +84,7 @@ jobs:
         echo "Triggered by ${{github.event_name}} event"
         echo "Repo root directory: $GITHUB_WORKSPACE"
         echo "Current directory: $PWD"
+        echo "Repo name: $REPO_NAME"
   
     - name: Check Branch Input
       run: |
@@ -425,7 +426,6 @@ jobs:
       run: |
           export PAT="${{ secrets.SILABS_THIEUVU_PAT}}"  
           export REPO_OWNER="SiliconLabsSoftware"
-          export REPO_NAME="$REPO_NAME"
           export RUN_ID="${{ github.run_id }}" 
           export ARTIFACT_NAME="firmware_mg12_gcc"  
           
