--- a/.github/workflows/00-Check_Coding_Convention.yaml
+++ b/.github/workflows/00-Check_Coding_Convention.yaml
@@ -1,5 +1,8 @@
 name: 00-Check Coding Convention
 on:
+  pull_request:
+    branches:
+      - 'main'
   workflow_dispatch:
     inputs:
       branch: 
